# canopy

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
canopy/: __init__.py  cli.py  config.py  decode.py  obd.py  trace.py
canopy/data/: __init__.py  db.py  models.py
canopy/hal/: __init__.py  cab.py  can_iface.py  capture.py  commands.py  instruments.py  isotp.py  seedkey.py  uds.py  visa.py
canopy/profiles/: generate.py  schema.py
canopy/runner/: __init__.py  sequence.py
canopy/sim/: __init__.py  e2e.py  ecu.py  loader.py  nm.py  uds_server.py  vehicle.py
canopy/vision/: __init__.py  api_reference.py  app.py  auth.py  bench.py  config.py  diagram.py  extract.py  knowledge.py  migrate.py  ollama_client.py  pgstore.py  productlib.py  prompts.py  research.py  restbus.py  store.py  wiki.py
canopy/vision/knowledge/: ai-ingestion-schema.md  analog-inputs-adc-protection.md  appliance-industrial-board-triage.md  automotive-communications-extended.md  automotive-front-end-protection.md  automotive-module-family-patterns.md  bench-safety-esd-and-dut-protection.md  can-bus.md  component-checks.md  component-failure-modes-expanded.md  corrosion-cleaning-conformal-coating.md  digital-logic-and-interface-ics.md  fault-tree-templates.md  functional-test-fixtures-and-simulation.md  glossary.md  mcu-clock-reset-watchdog-memory.md  methodology.md  output-drivers-and-actuators.md  parts-replacement-and-substitution.md  pcb-pad-trace-via-repair.md  power-rails.md  power-shorts-current-injection.md  reflow-hot-air-and-bga-rework.md  regulators-and-power-conversion.md  reverse-engineering-documentation.md  safe-data-programming-and-cloning.md  sensor-circuits.md  soldering-hand-tools-and-consumables.md  standards-and-reference-documents.md  test-equipment-selection-and-use.md  thermal-mechanical-intermittents.md  verification-and-quality-control.md  visual-inspection-and-board-mapping.md
canopy/vision/static/: admin.html  app.js  index.html  login.html  mobile.html  style.css
db/init/: 01-extensions.sql
dbc/: ford_f250_powertrain.dbc
deploy/: canopy-db.service  canopy.service  nginx-canopy.conf
docs/: AI-VISION.md  ARCHITECTURE-NOTES.md  BATTLE-PLAN.md  CAB-INTEGRATION.md  CAB-PROTOCOL.md  DEPLOY.md  GAMEPLAN.md  GUIDED-TRIAGE.md  HARDWARE.md  INSTRUMENT-HARDWARE.md  INSTRUMENT-PROTOCOL.md  INSTRUMENT-PYVISA.md  PERFORMANCE.md  QUICKSTART.md  USAGE.md
scripts/: bench.py
tests/: conftest.py  test_auth.py  test_cab.py  test_can_iface.py  test_cli.py  test_commands.py  test_control.py  test_data_models.py  test_decode.py  test_pgstore.py  test_sim.py  test_trace.py  test_uds.py  test_vision.py
tests/data/: test.dbc
vehicles/: ford_f250_6.7.yaml
