[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canopy"
version = "0.1.0"
description = "CANOPY — Universal CAN Module Test & Diagnostic Station"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Circuit Board Medics" }]
dependencies = [
    "python-can>=4.3",
    "can-isotp>=2.0",
    "udsoncan>=1.23",
    "cantools>=39.4",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
canopy = "canopy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["canopy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's API relies on function calls (typer.Option/Argument) as parameter defaults.
"canopy/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "vcan: tests that require a vcan0 virtual CAN interface (skipped if absent)",
]
